force-app/main/default/objects/Campaign/fields/Actual_Cost_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_of_Sale__c</fullName>
    <formula>IF(Actual_Revenue_in_Campaign__c=0,0,ActualCost / Actual_Revenue_in_Campaign__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Cost of Sale (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>