force-app/main/default/objects/Campaign/fields/Actual_Pax_Incremental_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Actual_Pax_Incremental_in_Hierarchy__c</fullName>
    <inlineHelpText>Actual Pax Incremental in Hierarchy</inlineHelpText>
    <label>Pax Incremental in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>