force-app/main/default/objects/Campaign/fields/Bench_marking__c.field-meta.xml
<CustomField>
    <fullName>Bench_marking__c</fullName>
    <description>Bench-marking</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bench-marking</inlineHelpText>
    <label>Bench-marking</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>