force-app/main/default/objects/Campaign/fields/Booking_Incremental__c.field-meta.xml
<CustomField>
    <fullName>Booking_Incremental__c</fullName>
    <label>Booking Incremental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>