force-app/main/default/objects/Campaign/fields/Budget_Category__c.field-meta.xml
<CustomField>
    <fullName>Budget_Category__c</fullName>
    <label>Budget Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent seminars</fullName>
            </value>
            <value>
                <fullName>Always On Performance</fullName>
            </value>
            <value>
                <fullName>Australian Embassy</fullName>
            </value>
            <value>
                <fullName>Collateral</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>PR/Social Activity (Awareness)</fullName>
            </value>
            <value>
                <fullName>Qantas.com promotions</fullName>
            </value>
            <value>
                <fullName>Reactive</fullName>
            </value>
            <value>
                <fullName>Retail Marketing / Tactical</fullName>
            </value>
            <value>
                <fullName>Sponsorships</fullName>
            </value>
            <value>
                <fullName>STB/CAG triparty</fullName>
            </value>
            <value>
                <fullName>STO partnerships</fullName>
            </value>
            <value>
                <fullName>TNZ</fullName>
            </value>
            <value>
                <fullName>Trade Incentives</fullName>
            </value>
            <value>
                <fullName>Trade promotions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>