force-app/main/default/objects/Campaign/fields/Budget_Variance_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Budget_Variance_Indicator__c</fullName>
    <formula>If(  Budget_Variance_parent__c  &gt;=0,IMAGE(&quot;resource/CampaignDiffindic/Green.jpg&quot;, &quot;Positive&quot;, 25,25),IMAGE(&quot;resource/CampaignDiffindic/Red.jpg&quot;, &quot;Negative&quot;, 30,30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Variance Indicator</label>
    <type>Text</type>
</CustomField>