force-app/main/default/objects/Campaign/fields/Catering__c.field-meta.xml
<CustomField>
    <fullName>Catering__c</fullName>
    <label>Catering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Canapes</fullName>
            </value>
            <value>
                <fullName>Sit down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>