force-app/main/default/objects/Campaign/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <description>Loyalty commercial field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Channels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>