force-app/main/default/objects/Campaign/fields/Child_Budget_Varianc__c.field-meta.xml
<CustomField>
    <fullName>Child_Budget_Varianc__c</fullName>
    <formula>IF( RecordType.Name = &quot;Marketing - Child&quot;, BudgetedCost - Child_Actual_Cost__c, IF (RecordType.Name = &quot;Marketing - Parent&quot;, Parent_Budgeted_Cost__c - HierarchyActualCost,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Parent Campaign - Difference between Total Budget Cost of Child Campaigns and Total Actual Cost of Child campaigns.
Child Campaign - Difference between Budget Cost and Actual Cost</inlineHelpText>
    <label>Budget Variance (Budget - Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>