force-app/main/default/objects/Campaign/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <inlineHelpText>Enter full City name</inlineHelpText>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adelaide</fullName>
            </value>
            <value>
                <fullName>Albury</fullName>
            </value>
            <value>
                <fullName>Alice Springs</fullName>
            </value>
            <value>
                <fullName>Auckland</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Broome</fullName>
            </value>
            <value>
                <fullName>Cairns</fullName>
            </value>
            <value>
                <fullName>Canberra</fullName>
            </value>
            <value>
                <fullName>Darwin</fullName>
            </value>
            <value>
                <fullName>Hobart</fullName>
            </value>
            <value>
                <fullName>Kalgoorlie</fullName>
            </value>
            <value>
                <fullName>Karratha</fullName>
            </value>
            <value>
                <fullName>Kogarah</fullName>
            </value>
            <value>
                <fullName>Launceston</fullName>
            </value>
            <value>
                <fullName>Mackay</fullName>
            </value>
            <value>
                <fullName>Melbourne</fullName>
            </value>
            <value>
                <fullName>Mildura</fullName>
            </value>
            <value>
                <fullName>Mount Isa</fullName>
            </value>
            <value>
                <fullName>Parramatta</fullName>
            </value>
            <value>
                <fullName>Perth</fullName>
            </value>
            <value>
                <fullName>Rockhampton</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Tamworth</fullName>
            </value>
            <value>
                <fullName>Toowoomba</fullName>
            </value>
            <value>
                <fullName>Wagga Wagga</fullName>
            </value>
            <value>
                <fullName>Wellington</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>