force-app/main/default/objects/Campaign/fields/Click_Through_Rate__c.field-meta.xml
<CustomField>
    <fullName>Click_Through_Rate__c</fullName>
    <description>Loyalty commercial field</description>
    <label>Click Through Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>