force-app/main/default/objects/Campaign/fields/Click_to_Open__c.field-meta.xml
<CustomField>
    <fullName>Click_to_Open__c</fullName>
    <description>Loyalty commercial field</description>
    <label>Click to Open</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>