force-app/main/default/objects/Campaign/fields/Cost_to_Aquire__c.field-meta.xml
<CustomField>
    <fullName>Cost_to_Aquire__c</fullName>
    <description>Loyalty commercial</description>
    <label>Cost to Aquire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>