force-app/main/default/objects/Campaign/fields/Cruise_Partner__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cruise Partner</label>
    <type>Checkbox</type>
</CustomField>