force-app/main/default/objects/Campaign/fields/Date_Added_to_Register__c.field-meta.xml
<CustomField>
    <fullName>Date_Added_to_Register__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Added to Register</label>
    <type>Date</type>
</CustomField>