force-app/main/default/objects/Campaign/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <label>Deadline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6 Weeks Prior</fullName>
            </value>
            <value>
                <fullName>5 Weeks Prior</fullName>
            </value>
            <value>
                <fullName>4 Weeks Prior</fullName>
            </value>
            <value>
                <fullName>3 Weeks Prior</fullName>
            </value>
            <value>
                <fullName>2 Weeks Prior</fullName>
            </value>
            <value>
                <fullName>1 Weeks Prior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>