force-app/main/default/objects/Campaign/fields/Delivery_Mode__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Mode__c</fullName>
    <label>Delivery Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eLearn</fullName>
            </value>
            <value>
                <fullName>eLearn and quiz</fullName>
            </value>
            <value>
                <fullName>Face-to-face</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Webinar (as eLearn)</fullName>
            </value>
            <value>
                <fullName>Webinar/Elearn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>