force-app/main/default/objects/Campaign/fields/Design_and_Print_Cost__c.field-meta.xml
<CustomField>
    <fullName>Design_and_Print_Cost__c</fullName>
    <description>Design and Print Budget</description>
    <label>Design and Print Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>