force-app/main/default/objects/Campaign/fields/Difference_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Difference_Indicator__c</fullName>
    <formula>If( Child_Budget_Varianc__c &gt;=0,IMAGE(&quot;resource/CampaignDiffindic/Green.jpg&quot;, &quot;Positive&quot;, 25,25),IMAGE(&quot;resource/CampaignDiffindic/Red.jpg&quot;, &quot;Negative&quot;, 30,30))</formula>
    <label>Difference Indicator</label>
    <type>Text</type>
</CustomField>