force-app/main/default/objects/Campaign/fields/Duration_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_minutes__c</fullName>
    <description>Duration of the Program delivery</description>
    <label>Duration (in minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>