force-app/main/default/objects/Campaign/fields/eLearn__c.field-meta.xml
<CustomField>
    <fullName>eLearn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eLearn</label>
    <type>Checkbox</type>
</CustomField>