force-app/main/default/objects/Campaign/fields/Estimated_Incremental_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Incremental_Revenue__c</fullName>
    <inlineHelpText>For B&amp;G Campaigns only.</inlineHelpText>
    <label>Estimated Incremental Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>