force-app/main/default/objects/Campaign/fields/Event_allocated_to__c.field-meta.xml
<CustomField>
    <fullName>Event_allocated_to__c</fullName>
    <label>Event allocated to</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business &amp; Government</fullName>
            </value>
            <value>
                <fullName>Agency Partnership</fullName>
            </value>
            <value>
                <fullName>QBR</fullName>
            </value>
            <value>
                <fullName>Learning &amp; Development</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Strategic Account Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>