force-app/main/default/objects/Campaign/fields/Event_Venue__c.field-meta.xml
<CustomField>
    <fullName>Event_Venue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event Venue</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>