force-app/main/default/objects/Campaign/fields/Expected_Cost_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Expected_Cost_of_Sale__c</fullName>
    <formula>IF(ExpectedRevenue=0,0,BudgetedCost / ExpectedRevenue)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Cost of Sale (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>