force-app/main/default/objects/Campaign/fields/Expected_Incremental_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Incremental_Revenue__c</fullName>
    <label>Expected Incremental Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>