force-app/main/default/objects/Campaign/fields/Facilitater_Guide__c.field-meta.xml
<CustomField>
    <fullName>Facilitater_Guide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facilitater Guide</label>
    <type>Checkbox</type>
</CustomField>