force-app/main/default/objects/Campaign/fields/Final_RSVP_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_RSVP_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final RSVP Date</label>
    <type>Date</type>
</CustomField>