force-app/main/default/objects/Campaign/fields/Focus__c.field-meta.xml
<CustomField>
    <fullName>Focus__c</fullName>
    <label>Focus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ext</fullName>
            </value>
            <value>
                <fullName>In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>