force-app/main/default/objects/Campaign/fields/Hand_back_Date__c.field-meta.xml
<CustomField>
    <fullName>Hand_back_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hand back Date</label>
    <type>Date</type>
</CustomField>