force-app/main/default/objects/Campaign/fields/Handouts__c.field-meta.xml
<CustomField>
    <fullName>Handouts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handouts</label>
    <type>Checkbox</type>
</CustomField>