force-app/main/default/objects/Campaign/fields/Host_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Host_Mobile_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Host Mobile Number</label>
    <type>Phone</type>
</CustomField>