force-app/main/default/objects/Campaign/fields/Hotel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hotel Partner</label>
    <type>Checkbox</type>
</CustomField>