force-app/main/default/objects/Campaign/fields/Incentive_Budget__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Budget__c</fullName>
    <inlineHelpText>This is only used for Campaign Type = Incentive Budget</inlineHelpText>
    <label>Incentive Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>