force-app/main/default/objects/Campaign/fields/Initial_RSVP_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_RSVP_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initial RSVP Date</label>
    <type>Date</type>
</CustomField>