force-app/main/default/objects/Campaign/fields/Investment_TY__c.field-meta.xml
<CustomField>
    <fullName>Investment_TY__c</fullName>
    <label>Investment (TY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>