force-app/main/default/objects/Campaign/fields/JetStar__c.field-meta.xml
<CustomField>
    <fullName>JetStar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JetStar</label>
    <type>Checkbox</type>
</CustomField>