force-app/main/default/objects/Campaign/fields/Key_Insights_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Key_Insights_Feedback__c</fullName>
    <description>Key Insights/Feedback</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Do you have a proposed feedback/insight questions for the campaign?</inlineHelpText>
    <label>Key Insights/Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>