force-app/main/default/objects/Campaign/fields/Leftover_Budgeted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Leftover_Budgeted_Cost__c</fullName>
    <formula>IF( RecordType.Name = &quot;Marketing - Parent&quot;, Total_Campaign_Budgeted_Cost__c - Parent_Budgeted_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Parent Campaign  :  Total Campaign Budget Cost - Total Budget Cost of Child Campaigns.</inlineHelpText>
    <label>Leftover Budgeted Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>