force-app/main/default/objects/Campaign/fields/LookupAccount__c.field-meta.xml
<CustomField>
    <fullName>LookupAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up Account to associate with campaing</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Associated Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>