force-app/main/default/objects/Campaign/fields/Media_Cost__c.field-meta.xml
<CustomField>
    <fullName>Media_Cost__c</fullName>
    <label>Media Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>