force-app/main/default/objects/Campaign/fields/No_of_Closed_Completed_Campaign_Mambers__c.field-meta.xml
<CustomField>
    <fullName>No_of_Closed_Completed_Campaign_Mambers__c</fullName>
    <inlineHelpText>Indicates if the campaign member status is &quot;Closed Completed&quot;</inlineHelpText>
    <label>Completed</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Closed - Completed Call, Closed – Completed Call, Closed Completed Call</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>