force-app/main/default/objects/Campaign/fields/No_of_Planned_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>No_of_Planned_Campaign_Members__c</fullName>
    <inlineHelpText>Indicates if the campaign member status is &quot;Planned&quot;</inlineHelpText>
    <label>Planned</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Planned</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>