force-app/main/default/objects/Campaign/fields/Number_of_Tickets_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tickets_Allocated__c</fullName>
    <label>Number of Tickets Allocated</label>
    <summarizedField>CampaignMember.Number_of_Tickets__c</summarizedField>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>