force-app/main/default/objects/Campaign/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator of the fact that certain offer is in play, see description for more details.</description>
    <inlineHelpText>Indicator of the fact that certain offer is in play, see description for more details.</inlineHelpText>
    <label>Offer</label>
    <type>Checkbox</type>
</CustomField>