force-app/main/default/objects/Campaign/fields/Open_Rates__c.field-meta.xml
<CustomField>
    <fullName>Open_Rates__c</fullName>
    <description>Loyalty commercial field</description>
    <label>Open Rates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>