force-app/main/default/objects/Campaign/fields/Parent_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Parent_Actual_Cost__c</fullName>
    <description>It will roll up all the child actual expenses on Parent Campaign.</description>
    <label>Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>