force-app/main/default/objects/Campaign/fields/Partners_Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Partners_Target_Audience__c</fullName>
    <description>Loyalty commercial field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner&apos;s Target Audience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>