force-app/main/default/objects/Campaign/fields/purecloud__PureCloud_Contact_List_ID__c.field-meta.xml
<CustomField>
    <fullName>purecloud__PureCloud_Contact_List_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Genesys Cloud Contact List ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>