force-app/main/default/objects/Campaign/fields/Qantas_Freight__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Freight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qantas Freight</label>
    <type>Checkbox</type>
</CustomField>