force-app/main/default/objects/Campaign/fields/Qantas_Meeting_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Meeting_Rooms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qantas Meeting Rooms</label>
    <type>Checkbox</type>
</CustomField>