force-app/main/default/objects/Campaign/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <description>Results</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Details of what success measures are to be reported on.</inlineHelpText>
    <label>Results</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>