force-app/main/default/objects/Campaign/fields/Revenue_Incremental__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Incremental__c</fullName>
    <label>Revenue Incremental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>