force-app/main/default/objects/Campaign/fields/Revenue_Statistics__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Statistics__c</fullName>
    <description>This field allows the users to input the final Revenue generated from Campaign</description>
    <label>Revenue(LY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>