force-app/main/default/objects/Campaign/fields/Runsheet__c.field-meta.xml
<CustomField>
    <fullName>Runsheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Runsheet</label>
    <type>Checkbox</type>
</CustomField>