force-app/main/default/objects/Campaign/fields/Segment_Incremental__c.field-meta.xml
<CustomField>
    <fullName>Segment_Incremental__c</fullName>
    <label>Segment Incremental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>