force-app/main/default/objects/Campaign/fields/Success_Indicators__c.field-meta.xml
<CustomField>
    <fullName>Success_Indicators__c</fullName>
    <description>Success Indicators</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Success Indicators</inlineHelpText>
    <label>Success Indicators</label>
    <length>2500</length>
    <type>Html</type>
</CustomField>