force-app/main/default/objects/Campaign/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leisure</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>C-Level</fullName>
            </value>
            <value>
                <fullName>Key Contacts</fullName>
            </value>
            <value>
                <fullName>Directors</fullName>
            </value>
            <value>
                <fullName>Managers - Procurement</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Team Leaders</fullName>
            </value>
            <value>
                <fullName>Travel Bookers</fullName>
            </value>
            <value>
                <fullName>Executive Assistants</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>TMC</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
                <isActive>false</isActive>
                <label>Procurement</label>
            </value>
            <value>
                <fullName>Student</fullName>
                <isActive>false</isActive>
                <label>Student</label>
            </value>
            <value>
                <fullName>Travel Booker</fullName>
                <isActive>false</isActive>
                <label>Travel Booker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>